# controllers/ProductController.js
@@ -1,5 +1,47 @@
 const { PrismaClient } = require("@prisma/client");
 const prisma = new PrismaClient();
+const Product = prisma.product;
+
+// Função para mostrar todos os produtos com paginação
+const showProducts = async (req, res) => {
+    try {
+        console.log("Fetching products...");
+
+        // Extrair os parâmetros da query string
+        const { limite = 10, pagina = 1 } = req.query;
+
+        // Definir os valores permitidos para limite
+        const validLimits = [5, 10, 30];
+        const limit = parseInt(limite, 10);
+        const page = parseInt(pagina, 10);
+
+        if (!validLimits.includes(limit)) {
+            return res.status(400).json({ error: "Valor inválido para limite. Use 5, 10 ou 30." });
+        }
+
+        if (page < 1) {
+            return res.status(400).json({ error: "A página deve ser maior ou igual a 1." });
+        }
+
+        // Calcular o offset
+        const offset = (page - 1) * limit;
+
+        // Buscar produtos com paginação
+        const products = await Product.findMany({
+            take: limit,
+            skip: offset,
+            include: {
+                user: true
+            }
+        });
+
+        console.log("Products fetched:", products);
+        res.status(200).json(products);
+    } catch (error) {
+        console.error("Erro ao buscar produtos:", error);
+        res.status(500).json({ error: "Erro ao buscar produtos." });
+    }
+};
 
 const createProduct = async (req, res) => {
 	try {
@@ -81,6 +123,7 @@ const deleteProduct = async (req, res) => {
 };
 
 module.exports = {
+	showProducts,
 	createProduct,
 	deleteProduct,
 };
