# routes/orders.js
@@ -4,6 +4,9 @@ const router = express.Router();
 const authMiddleware = require("../middlewares/authMiddleware.js");
 const OrderController = require("../controllers/OrderController.js");
 
+// Rota para mostrar todos os usuários cadastrados
+router.get("/", OrderController.showOrders);
+
 // Rota para criar um pedido
 router.post("/criar", authMiddleware, OrderController.createOrder);
 
