# routes/products.js
@@ -5,6 +5,9 @@ const authMiddleware = require("../middlewares/authMiddleware.js");
 
 const ProductController = require("../controllers/ProductController");
 
+// Rota para mostrar todos os usuários cadastrados
+router.get("/", ProductController.showProducts);
+
 /* GET home page. */
 router.post("/criar", authMiddleware, ProductController.createProduct);
 
